# polymarket-api-python

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: publish.yml
docs/: auth-and-keys.md  cancel-and-replace.md  handling-resolution.md  orderbook.md  rate-limits.md  read-markets.md  sign-and-place-an-order.md  websockets.md
examples/: _common.py  orderbook_snapshot.py  read_markets.py  stream_prices.py
polymarket_api/: __init__.py  client_order_id.py  constants.py  gamma.py  orderbook.py  orders.py  ws.py
tests/: test_client_order_id.py  test_gamma_and_events.py  test_orderbook_analytics.py  test_ws_resilience.py
