[project]
name = "polymarket-api-python"
version = "0.1.0"
description = "Typed Python client for the Polymarket API: read Gamma markets, snapshot and stream the CLOB order book, and place orders. Built by antflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "antflow", email = "hello@antflow.live" }]
keywords = [
    "polymarket",
    "prediction-markets",
    "clob",
    "trading",
    "api-client",
    "orderbook",
    "websocket",
    "polygon",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Order placement is opt-in: it pulls in Polymarket's official CLOB client,
# which does all EIP-712 signing. The read/stream/analytics core needs neither.
trading = ["py-clob-client-v2>=1.0.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://antflow.live"
Repository = "https://github.com/antflow-live/polymarket-api-python"
Documentation = "https://github.com/antflow-live/polymarket-api-python/tree/main/docs"
Issues = "https://github.com/antflow-live/polymarket-api-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
